Chat-Front/ChatFront/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chat-frontend
spec:
  selector:
    app: chat-frontend
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
